--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <div class="container">
         <h1>🚀 Sentiment Analysis with Transfer Learning</h1>
         <p>
-            We leverage the power of <strong>transfer learning</strong> 🚀, a technique where a model trained for one task is adapted for another. Pre-trained models, like "distilbert-base-uncased," are trained on vast datasets using significant computational resources. This extensive training process saves us time and money by allowing us to build on the existing knowledge of these models, rather than starting from scratch.
+            We leverage the power of <strong>transfer learning</strong>, a technique where a model trained for one task is adapted for another. Pre-trained models, like "distilbert-base-uncased," are trained on vast datasets using significant computational resources. This extensive training process saves us time and money by allowing us to build on the existing knowledge of these models, rather than starting from scratch.
         </p>
         <p>
             <strong>Pre-trained models</strong> capture a wide range of features from large datasets but may need fine-tuning for specialized tasks. This is where <strong>transfer learning</strong> comes into play. By fine-tuning on a specific dataset, we can quickly adapt these models to meet our particular needs, achieving much better accuracy on new tasks.
         </p>
         <p>
-            Our model has been fine-tuned from "distilbert-base-uncased," a 66-million-parameter pre-trained model, to perform sentiment analysis, distinguishing between positive and negative sentiments in text. This fine-tuning process ensures the model is both efficient and precise, utilizing the broad knowledge gained from pre-training while adapting to the specifics of sentiment analysis.
+            Our model has been fine-tuned from "distilbert-base-uncased," a 66-million-parameter pre-trained model, to perform sentiment analysis, distinguishing between positive and negative sentiments in text. Utilizing the broad knowledge gained from pre-training while adapting to the specifics of sentiment analysis.
         </p>
         <div class="embed-container">
             <script
